--- a/styles.css
+++ b/styles.css
@@ -30,16 +30,11 @@ section {
   background-color: rgb(204, 227, 247);
 }
 
-/* .card-container {
-  display: flex;
-  justify-content: center;
-} */
-
-/* main p:first-child {
+ main p:first-child {
   display: flex;
   justify-content: center;
   margin-top: 5rem;
-} */
+ }
 
 .header-text {
   font-size: 1.4rem;
