--- a/styles.css
+++ b/styles.css
@@ -17,21 +17,22 @@ main {
 
 section {
   flex: 0.4;
-  text-align: left;
+  flex-shrink: 1.5;
 }
 
 .card-img {
-  position: absolute;
-  z-index: -1s;
+  flex-shrink: 1.5;
+  /* z-index: -1s; */
   height: 100%;
+  width: 100%;
   min-width: 20rem;
-  width: 40%;
   background-color: rgb(204, 227, 247);
 }
 
 .header-text {
   font-size: 1.4rem;
   display: block;
+  padding-top: 2rem;
   padding-left: 2rem;
 }
 
@@ -54,47 +55,48 @@ form {
 }
 
 ul {
+  display: flex;
+  flex-direction: column;
   list-style: none;
   padding: 0;
   margin: 0;
-  gap: 2rem;
 }
 
 li {
-  margin-right: 1rem; /* adjust as needed */
+  margin: 0.5rem;
+}
+
+label,
+input {
+  display: block;
 }
 
 label {
   width: 20em;
   text-align: left;
-  row-gap: 2rem;
-  color: rgb(0, 0, 0);
-  padding: 1rem;
   text-align: left;
-  padding-left: 0rem;
 }
 
 input {
-  font: 1em sans-serif;
   row-gap: 2rem;
+  padding: 0.5rem;
   box-sizing: border-box;
   border: 1px solid #969696ee;
-  border-radius: 3%;
-  width: 21rem;
+  width: 20rem;
   background-color: black;
-  font-family: sans-serif;
+  color: rgb(255, 255, 255);
 }
 
 button {
-  margin-top: 4rem;
-  margin-left: 2rem;
-  width: 200px;
+  margin-top: 1rem;
+  margin-left: 2.5rem;
+  width: 10rem;
   height: 50px;
   padding: 2px;
   font-size: large;
   border-radius: 4px;
-  color: #16deb9;
-  border: 1px solid #00f9cb;
+  color: #0c8ce7;
+  border: 1px solid #0c8ce7;
 }
 
 button:hover {
@@ -110,7 +112,7 @@ p a:hover {
 }
 main p:last-of-type {
   font-size: 1rem;
-  margin-left: 2rem;
+  margin-left: 2.5rem;
   text-decoration: none;
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
